fix index description overflow

--- a/source/_data/styles.styl
+++ b/source/_data/styles.styl
@@ -336,12 +336,10 @@ h3.post-description-meta.en {
   }
 }
 
-.home {
-  p {
+.index article p {
   overflow : hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  }  
-}
+}  
